Adjusting constrains constants

--- a/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
@@ -73,43 +73,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="jQd-mP-h4M">
-                                <rect key="frame" x="0.0" y="88" width="414" height="702"/>
+                                <rect key="frame" x="16" y="88" width="382" height="686"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SwK-kf-y1h">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="234"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="228.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9cZ-ju-Iwh" userLabel="SlowButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="234"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="191" height="228.5"/>
                                                 <state key="normal" image="Slow"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUT-SD-FjD" userLabel="FastButton">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="234"/>
+                                                <rect key="frame" x="191" y="0.0" width="191" height="228.5"/>
                                                 <state key="normal" image="Fast"/>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GiZ-NB-N8H">
-                                        <rect key="frame" x="0.0" y="234" width="414" height="234"/>
+                                        <rect key="frame" x="0.0" y="228.5" width="382" height="229"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVx-Iw-ql1" userLabel="DarthVaderButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="234"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="191" height="229"/>
                                                 <state key="normal" image="LowPitch"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8V-Pi-tB2" userLabel="ChipmupButton">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="234"/>
+                                                <rect key="frame" x="191" y="0.0" width="191" height="229"/>
                                                 <state key="normal" image="HighPitch"/>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Svo-Sc-Zod">
-                                        <rect key="frame" x="0.0" y="468" width="414" height="234"/>
+                                        <rect key="frame" x="0.0" y="457.5" width="382" height="228.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YcW-cb-cpD" userLabel="ReverbButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="234"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="191" height="228.5"/>
                                                 <state key="normal" image="Reverb"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d6K-bQ-ShG" userLabel="EchoButton">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="234"/>
+                                                <rect key="frame" x="191" y="0.0" width="191" height="228.5"/>
                                                 <state key="normal" image="Echo"/>
                                             </button>
                                         </subviews>
@@ -117,7 +117,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfj-xs-rJS">
-                                <rect key="frame" x="175" y="798" width="64" height="64"/>
+                                <rect key="frame" x="175" y="782" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="64" id="WQr-hT-8D8"/>
                                     <constraint firstAttribute="height" constant="64" id="pXL-Wz-sHi"/>
@@ -127,13 +127,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hVA-Le-Ty7" firstAttribute="bottom" secondItem="dfj-xs-rJS" secondAttribute="bottom" id="7fP-HN-rB4"/>
-                            <constraint firstItem="jQd-mP-h4M" firstAttribute="leading" secondItem="hVA-Le-Ty7" secondAttribute="leading" id="FbR-KP-EBX"/>
-                            <constraint firstItem="hVA-Le-Ty7" firstAttribute="trailing" secondItem="jQd-mP-h4M" secondAttribute="trailing" id="R4M-Iw-d4n"/>
+                            <constraint firstItem="hVA-Le-Ty7" firstAttribute="bottom" secondItem="dfj-xs-rJS" secondAttribute="bottom" constant="16" id="7fP-HN-rB4"/>
+                            <constraint firstItem="jQd-mP-h4M" firstAttribute="leading" secondItem="hVA-Le-Ty7" secondAttribute="leading" constant="16" id="FbR-KP-EBX"/>
+                            <constraint firstItem="hVA-Le-Ty7" firstAttribute="trailing" secondItem="jQd-mP-h4M" secondAttribute="trailing" constant="16" id="R4M-Iw-d4n"/>
                             <constraint firstItem="hVA-Le-Ty7" firstAttribute="top" secondItem="jQd-mP-h4M" secondAttribute="top" id="Y9T-p2-yZx"/>
                             <constraint firstItem="dfj-xs-rJS" firstAttribute="top" secondItem="jQd-mP-h4M" secondAttribute="bottom" constant="8" symbolic="YES" id="eib-VI-TN7"/>
                             <constraint firstItem="dfj-xs-rJS" firstAttribute="centerX" secondItem="jQd-mP-h4M" secondAttribute="centerX" id="mxA-Kr-Bzy"/>
-                            <constraint firstItem="dfj-xs-rJS" firstAttribute="top" secondItem="jQd-mP-h4M" secondAttribute="bottom" constant="8" symbolic="YES" id="qen-iJ-KXD"/>
+                            <constraint firstItem="dfj-xs-rJS" firstAttribute="top" secondItem="jQd-mP-h4M" secondAttribute="bottom" constant="8" id="qen-iJ-KXD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hVA-Le-Ty7"/>
                     </view>
